--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "author": "Pavel-king <kehuaijin@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "font-awesome": "^4.7.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1"
   }
 }
