--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Pavel-king <kehuaijin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "rc-pagination": "1.15.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
