--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "author": "Pavel-king <kehuaijin@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "15.6.0",
     "rc-pagination": "1.15.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "simditor": "2.3.6"
   }
 }
